# tankquest-academy

./: .dockerignore  .env.example  .gitattributes  .gitignore  .prettierignore  AGENTS.md  Dockerfile  README.md  eslint.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.base.json  tsconfig.e2e.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.preview.conf.json  tauri.release.conf.json
apps/desktop/src-tauri/capabilities/: main.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
deploy/: deploy-container.sh  docker-compose.yml  host-nginx.conf  web-nginx.conf
docs/: README.md  admin-console-design.md  ai-prompt-guidelines.md  ai-service-and-safety.md  api-contract.md  art-asset-guidelines.md  backend-architecture.md  backend-safety-ops.md  backend-tech-selection.md  cicd-ops.md  client-layer-design.md  database-design.md  development-rules.md  frontend-architecture.md  frontend-tech-selection.md  frontend-theme-i18n.md  game-balancing.md  game-engine-guidelines.md  implementation-roadmap.md  multi-platform-packaging.md  mvp-scope.md  phase-five-acceptance.md  phase-five-one-family-playtest.md  phase-five-scope.md  (+15 more)
services/ai/: README.md  pyproject.toml
services/ai/tankquest_ai/: __init__.py  main.py  models.py  prompts.py  safety.py  service.py  settings.py
services/ai/tankquest_ai/providers/: __init__.py  base.py  langchain_openai.py  template.py
services/ai/tests/: test_adaptive_practice.py  test_api.py  test_explanations.py  test_langchain_provider.py  test_models.py  test_parent_report_summary.py  test_safety.py
(+211 files in other folders)
