[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "tankquest-ai"
version = "0.1.0"
description = "Optional, child-safe AI assistance service for TankQuest Academy"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.139,<0.140",
  "langchain-core>=1.4.9,<1.5",
  "langchain-openai>=1.3.5,<1.4",
  "pydantic>=2.13,<3",
  "uvicorn[standard]>=0.51,<0.52",
]

[project.optional-dependencies]
dev = [
  "httpx2>=2.5,<2.6",
  "mypy>=2.2,<2.3",
  "pytest>=9,<10",
  "ruff>=0.15.20,<0.16",
]

[tool.hatch.build.targets.wheel]
packages = ["tankquest_ai"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["tankquest_ai"]
