[package]
name = "tankquest-academy"
version = "0.4.0"
description = "TankQuest Academy Windows technical preview"
authors = ["TankQuest Academy"]
edition = "2021"
rust-version = "1.97"

[lib]
name = "tankquest_academy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.6.3", features = [] }

[dependencies]
tauri = { version = "=2.11.5", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
